--- a/index.html
+++ b/index.html
@@ -9,11 +9,43 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
 		<title>IP Tv</title>
-	</head>
-	<body>
-		<h1>Hello, world!</h1>
+		<link rel="shortcut icon" href="logo.png" />
 		
-		<video width="100%" src="http://midia.faap.br:80/faaplatamlive-live/stream_720/livestream.m3u8" controls autoplay>
+		<style>
+			.video-full {
+				position: relative;
+				top: 0px;
+				left: 0px;
+				width: 100%;
+				height: calc(100% - 56px);
+			}
+		</style>
+	</head>
+	<body style="background-color: #000; color: #fff;">
+		
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		  <div class="container-fluid">
+			<a class="navbar-brand mb-0 h1" href="#">
+			<img src="logo.png" alt="" width="23" class="d-inline-block align-top">
+			IP Tv</a>
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="nav-item dropdown">
+					  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+						Canais
+					  </a>
+					  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<li><a class="dropdown-item" href="#">Canal 1</a></li>
+						<li><a class="dropdown-item" href="#">Canal 2</a></li>
+						<li><a class="dropdown-item" href="#">Canal 3</a></li>
+					  </ul>
+					</li>
+				</ul>
+			</div>
+		  </div>
+		</nav>
+		
+		<video class="video-full" src="http://midia.faap.br:80/faaplatamlive-live/stream_720/livestream.m3u8" controls="" autoplay="">
         </video>
 		
 		<!-- Optional JavaScript; choose one of the two! -->
@@ -22,8 +54,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
 		<!-- Option 2: Separate Popper and Bootstrap JS -->
-		<!--
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+		<!--<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 		-->
 	</body>
