--- a/index.html
+++ b/index.html
@@ -10,24 +10,49 @@
 
 		<title>IP Tv</title>
 		<link rel="shortcut icon" href="logo.png" />
-		
+		<script>
+			function Ajustmenu(){
+				setTimeout(function(){
+					document.getElementById('menu').style.opacity = 0;
+					document.getElementById('menu').onmouseover = function(){
+						document.getElementById('menu').style.opacity = 1;
+					}
+					document.getElementById('menu').onmouseout = function(){
+						document.getElementById('menu').style.opacity = 0;
+					}
+				}, 2000);
+			}
+		</script>
 		<style>
+			.navbar {
+				z-index: 1;
+				transition: opacity 0.5s;
+			}
+			#menu:hover {
+				opacity: 1.0;
+			}
 			.video-full {
-				position: relative;
+				position: absolute;
 				top: 0px;
 				left: 0px;
+				right: 0px;
+				bottom: 0px;
 				width: 100%;
-				height: calc(100% - 56px);
+				height: 100%;
+				z-index: 0;
 			}
 		</style>
 	</head>
-	<body style="background-color: #000; color: #fff;">
+	<body style="background-color: #000; color: #fff;" onload="Ajustmenu();">
 		
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="menu">
 		  <div class="container-fluid">
 			<a class="navbar-brand mb-0 h1" href="#">
 			<img src="logo.png" alt="" width="23" class="d-inline-block align-top">
 			IP Tv</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav">
 					<li class="nav-item dropdown">
