--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<li><a class="dropdown-item" href="#">Canal 2</a></li>
 						<li><a class="dropdown-item" href="#">Canal 3</a></li>
 						<div class="dropdown-divider"></div>
-						<li><a class="dropdown-item" href="#" onclick="playM3u8('http://live.redtraffic.xyz/latina.m3u8');">Canal Asdulto +18</a></li>
+						<li><a class="dropdown-item" href="#" onclick="playM3u8('http://live.redtraffic.xyz/latina.m3u8');">Canal Adulto +18</a></li>
 					  </ul>
 					</li>
 				</ul>
