--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		<title>IP Tv</title>
 		<link rel="shortcut icon" href="logo.png" />
 		
-		<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+		<!--<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>-->
+		<script type="text/javascript" src="js/hlsmin.js"></script>
 		<script>
 			var view = false;
 			var count = 0;
