--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="shortcut icon" href="logo.png" />
 		
 		<!--<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>-->
-		<script type="text/javascript" src="js/hlsmin.js"></script>
+		<script type="text/javascript" src="hlsmin.js"></script>
 		<script>
 			var view = false;
 			var count = 0;
