--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 		<!-- Bootstrap CSS -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+		<meta name="copyright" content="FelipeLm3g">
+		<meta name="description" content="Assista gratuitamente e sem propagandas seu canal favorito. Ajude-nos a melhorar a ferramenta pelo GitHub.">
+		<meta name="keywords" content="IPTV,online,assistir,canal,ip,tv">
+		<meta name="author" content="FelipeLm3g">
 		
 		<title>IP Tv</title>
 		<link rel="shortcut icon" href="logo.png" />
