--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
 					  </a>
 					  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 						<li><a class="dropdown-item" href="#" onclick="playM3u8('https://streaming.cnnbrasil.com.br/cnndigital_main.m3u8');">CNN Brasil</a></li>
-						<!--<li><a class="dropdown-item" href="#" onclick="playM3u8('http://evpp.mm.uol.com.br:1935/ne10/ne10.smil/playlist.m3u8');">SBT - PE</a></li>-->
-						<!--<li><a class="dropdown-item" href="#" onclick="playM3u8('http://evpp.mm.uol.com.br:1935/geob_band/app/playlist.m3u8');">BAND TV</a></li>-->
-						<!--<li><a class="dropdown-item" href="#" onclick="playM3u8('http://c2.manasat.com:1935/kcine/kcine3/playlist.m3u8');">KURIAKOS CINE</a></li>-->
+						<li><a class="dropdown-item" href="#" onclick="playM3u8('http://evpp.mm.uol.com.br:1935/ne10/ne10.smil/playlist.m3u8');">SBT - PE</a></li>
+						<li><a class="dropdown-item" href="#" onclick="playM3u8('http://evpp.mm.uol.com.br:1935/geob_band/app/playlist.m3u8');">BAND TV</a></li>
+						<li><a class="dropdown-item" href="#" onclick="playM3u8('http://c2.manasat.com:1935/kcine/kcine3/playlist.m3u8');">KURIAKOS CINE</a></li>
 						<li><a class="dropdown-item" href="#" onclick="playM3u8('https://livefocamundo.com:8081/8588/index.m3u8');">KRÓNOS MOVIE</a></li>
 						<div class="dropdown-divider"></div>
 						<li><a class="dropdown-item" href="#" onclick="playM3u8('http://live.redtraffic.xyz/latina.m3u8');">Canal Adulto +18</a></li>
